# legate

./: .clang-format  .clang-tidy  .coderabbit.yaml  .dir-locals.el  .gdbinit  .gersemirc  .gitignore  .gitlab-ci.yml  .lldbinit  .pre-commit-config.yaml  BUILD.html  BUILD.md  BUILD.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.html  CONTRIBUTING.rst  LICENSE  README.html  README.md  REUSE.toml  VERSION  bind.sh  configure  faq.html  gasnet.html  genindex.html  hdf5_gds.html  index.html  install.py  installation.html  jupyter.html  legate-bind.sh  legate_core_cpp.cmake  legate_core_python.cmake  legate_cpp.cmake  legate_python.cmake  makefile  mpi-wrapper.html  networking-wheels.html  (+13 more)
benchmarks/cpp/: CMakeLists.txt  inline_launch.cc
docs/legate/: CMakeLists.txt  Doxyfile.in  switcher.json  switcher.json.license
docs/legate/core/: CMakeLists.txt  Doxyfile.in  Makefile  switcher.json
docs/legate/source/: BUILD.rst  conf.py  faq.rst  gasnet.rst  index.rst  installation.rst  jupyter.rst  mpi-wrapper.rst  networking-wheels.rst  oss-licenses.rst  overview.rst  resources.rst  usage.rst  user.rst  versions.rst
examples/: CMakeLists.txt
examples/collective/: editable-install.sh
examples/collective/collective/: __init__.py  lib.py
examples/collective/src/: collective_test.cc
examples/cpp/: CMakeLists.txt  build.sh  main.cc  run.sh
examples/cpp/hello/: hello.cc  hello_print.cc  task_hello.cc  task_hello.h
examples/cpp/io/: io.cc  task_io.cc  task_io.h
examples/hello/: CMakeLists.txt  README.md  setup.py
examples/hello/examples/: cunumeric-variance.py  hello-world.md  hello-world.py  variance.md  variance.py
examples/hello/hello/: __init__.py  hello.py
examples/hello/src/: CMakeLists.txt  hello_cffi.h  hello_world.cc  hello_world.h  iota.cc  square.cc  sum.cc
examples/io/: CMakeLists.txt  README.md  editable-install.sh  setup.py
examples/io/examples/: even_tiles.py  single_file.py  uneven_tiles.py
examples/io/legateio/: __init__.py  legateio.py
examples/io/src/: CMakeLists.txt  legateio.cc  legateio.h  legateio_cffi.h  read_even_tiles.cc  read_file.cc  read_uneven_tiles.cc  util.cc  util.h  write_even_tiles.cc  write_file.cc  write_uneven_tiles.cc
examples/reduction/: CMakeLists.txt  README.md  editable-install.sh  install.sh  setup.py
examples/reduction/examples/: bincount.py  histogram.py  matmul.py  sum_over_axis.py  unique.py
examples/reduction/reduction/: __init__.py  reduction.py
examples/reduction/src/: CMakeLists.txt  bincount.cc  categorize.cc  histogram.cc  matmul.cc  mul.cc  reduction_cffi.h  sum_over_axis.cc  unique.cc
examples/region_manager/examples/: test_region_manager.py
examples/region_manager/src/: library.h
examples/registry/src/: library.cc  registry_cffi.h
examples/scoping/src/: scoping_cffi.h
examples/tree_reduce/src/: produce_normal.cc  reduce_normal.h
legate/core/_lib/: CMakeLists.txt  __init__.pxd  context.pyx  legate_c.pxd  legate_c.pyi  legate_c.pyx  legate_defines.pxd  legate_defines.pyi  types.pyx
legate/timing/_lib/: CMakeLists.txt  __init__.py  timing.pxd  timing.pyi  timing.pyx
scripts/pre-commit/clang_tidy_plugins/: CMakeLists.txt
share/legate/lib/: CMakeLists.txt  build.bash  mpi_wrapper.cc  mpi_wrapper_types.h  wrapper_test.cc
src/: CMakeLists.txt  CMakePresets.json  core.mk  env_defaults.h  legate.h  legate.mk  legate_c.h  legate_defines.h  legate_defines.h.in  legate_preamble.h
src/cmake/: generate_install_info_py.cmake  legate_helper_functions.cmake  policies.cmake
src/cmake/Modules/: bin2c.cmake  clang_tidy.cmake  compile_commands.cmake  cpm_helpers.cmake  cuda_arch_helpers.cmake  cython_rpaths.cmake  debug_helpers.cmake  debug_symbols.cmake  default_flags.cmake  export_aedifix_post_config.cmake  find_legate_cpp.cmake  find_or_configure.cmake  generate_fatbin_modules.cmake  generate_git_revision_file.cmake  generate_install_info.cmake  generate_legate_defines.cmake  generate_sanitizer_options.cmake  include_rapids.cmake  legate_configure_target.cmake  legate_options.cmake  set_cpu_arch_flags.cmake  setup_macos_sdk_environ.cmake  uninstall.cmake  utilities.cmake
src/cmake/patches/: data_source.diff  highfive_targets.diff  legion_cmakelists_half.diff  legion_commit_3c3809eb60092816a8c81264f7a31adc986e8940.diff  legion_commit_9d7823eca34c5d225311a23629534d1d3533a9bd.diff  legion_commit_af965540bfb159b21b35e6482b3839c2ebbcf540.diff  legion_complex_half.diff  legion_cuda_12_9.diff  legion_cuhook_optional.diff  legion_half.diff  legion_install_include_dir.diff  legion_install_lib_name.diff  legion_install_tools_option.diff  legion_realm_cmake_targets.diff  legion_redop.diff  legion_ucx_mpi_bootstrap.diff  mdspan_cpp_lib_span_dynamic_extent.diff  mdspan_cpp_lib_span_extents.diff  mdspan_cpp_lib_span_layout_stride.diff
src/cmake/presets/: ci_debug_cpu_tests.json  ci_debug_cuda_tests.json  ci_debug_tests_base.json  ci_release_cpu_tests.json  ci_release_cuda_tests.json  ci_release_tests_base.json  ci_sanitizer_cpu_tests.json  ci_sanitizer_cuda_tests.json
src/cmake/scripts/: bin2c.cmake  clang_tidy.cmake  external_clang_tidy.cmake  git_revision.cmake
src/cmake/templates/: bin2c.cc.in  bin2c.h.in  git_version.cc.in  install_info.py.in  legate_defines.h.in  stubfatbin.h.in  uninstall.cmake.in
src/cmake/versions/: legion_version.json  realm_version.json  versions.json
src/core/: legate_c.cc  legate_c.h
src/core/comm/: backend_network.cc  backend_network.h  coll.cc  coll.h  coll_comm.h  comm.cc  comm.h  comm_cal.cu  comm_cal.h  comm_cpu.cc  comm_cpu.h  comm_nccl.cu  comm_nccl.h  comm_util.cc  comm_util.h  communicator.h  communicator.inl  mpi_comm.cc  (+9 more)
src/cpp/: CMakeLists.txt  legate.h
src/data/: logical_store.cc  logical_store.h  scalar.h
src/mapping/: core_mapper.cc
src/python/: CMakeLists.txt
src/runtime/: launcher.cc  operation.cc  operation.h  runtime.cc  runtime.h
src/stl/: stl.hpp
src/task/: task.cc
src/timing/: timing.cc  timing.h
tests/cpp/: CMakeLists.txt  CMakePresets.json  build.sh  main.cc  main_with_runtime_init.cc  main_wo_runtime_init.cc  run.py  run.sh
(+3876 files in other folders)
