# Copyright (c) 2021-2022, NVIDIA CORPORATION.

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = legate/_version.py
versionfile_build = legate/_version.py
tag_prefix = v
parentdir_prefix = legate-

[options.packages.find]
where = .
include = legate*
exclude = install_info

[flake8]
exclude = __init__.py
ignore =
    # line break before binary operator
    W503
    # whitespace before :
    E203

[vermin]
verbose = 3
only_show_violations = yes
eval_annotations = yes
targets = 3.9-
# exclusion_regex =
#     'build/'

[options]
packages = find:
install_requires =
    numpy>=1.22
    # TODO: Add rest of install dependencies
python_requires = >=3.9,!=3.9.7
